[package]
name = "todoctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
surrealdb = "1.0.0-beta.7"
tokio = { version = "1.21.1", features = ["full"] }

